--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@
           with:
             context: .
             push: false
-            tags: ${{ secrets.DOCKER_HUB_USERNAME }}/test-calculator:latest
+            tags: ${{ secrets.DOCKER_HUB_NAME }}/test-calculator:latest
 
         - name: login to docker hub
           uses: docker/login-action@v1
@@ -49,4 +49,4 @@
             context: .
             dockerfile: Dockerfile
             push: true
-            tags: ${{ secrets.DOCKER_HUB_USERNAME }}/test-calculator:latest
+            tags: ${{ secrets.DOCKER_HUB_NAME }}/test-calculator:latest
