--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,8 @@
         - name: build the docker image
           uses: docker/build-push-action@v4
           with:
+            context: .
+            file: ./Dockerfile
             push: false
             tags: ${{ secrets.DOCKER_HUB_NAME }}/test-calculator:latest
 
@@ -45,6 +47,5 @@
         - name: push the docker image to docker hub
           uses: docker/build-push-action@v4
           with:
-            dockerfile: Dockerfile
             push: true
             tags: ${{ secrets.DOCKER_HUB_NAME }}/test-calculator:latest
