--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@
         - name: build the docker image
           uses: docker/build-push-action@v4
           with:
-            context: .
+            context: ./test-calculator
             file: ./Dockerfile
             push: false
             tags: ${{ secrets.DOCKER_HUB_NAME }}/test-calculator:latest
