[postcomments] support comments page

--- a/test-postcomments/src/main/resources/application.yaml
+++ b/test-postcomments/src/main/resources/application.yaml
@@ -17,3 +17,13 @@ conf:
       users: "/users"
       posts: "/posts"
       comments: "/comments"
+
+# logging:
+#   level:
+#     org:
+#       hibernate:
+#         SQL: DEBUG
+#         type:
+#           descriptor:
+#             sql:
+#               BasicBinder: TRACE
